# slang

./: .gitmodules  Cargo.toml  eslint.config.js  package-lock.json  package.json
.github/actions/sourcify/: run.yml
.github/actions/sourcify/test/: action.yml
.github/workflows/: sourcify_all_chains.yml  sourcify_single_chain.yml
crates/metaslang/bindings/src/: database.rs  lib.rs
crates/metaslang/bindings/src/builder/: functions.rs  mod.rs
crates/metaslang/graph_builder/: Cargo.toml
crates/metaslang/graph_builder/src/stack_graph/: functions.rs
crates/solidity/inputs/graph/: Cargo.toml  stack-graphs.msgb
crates/solidity/inputs/language/bindings/: 00-top-level.msgb  04-statements.msgb  rules.msgb
crates/solidity/inputs/language/src/: definition.rs
crates/solidity/outputs/cargo/crate/: Cargo.toml
crates/solidity/outputs/cargo/slang_solidity/: Cargo.toml
crates/solidity/outputs/cargo/tests/: Cargo.toml
crates/solidity/outputs/npm/tests/: package.json
crates/solidity/testing/perf/: Cargo.toml
crates/solidity/testing/perf/cargo/: Cargo.toml
crates/solidity/testing/perf/cargo/benches/binder/: main.rs
crates/solidity/testing/perf/cargo/benches/slang/: main.rs
crates/solidity/testing/perf/cargo/src/: benches_list.rs
crates/solidity/testing/perf/cargo/src/tests/: binder.rs  bindings_resolve.rs
crates/solidity/testing/perf/npm/: package-lock.json  package.json
crates/solidity/testing/perf/src/: lib.rs
crates/solidity/testing/sourcify/: Cargo.toml  package.json  tsconfig.json
documentation/public/user-guide/: tsconfig.json
(+126 files in other folders)
